[gd_scene load_steps=26 format=2]

[ext_resource path="res://frames/chort_run_anim_f2.png" type="Texture" id=1]
[ext_resource path="res://frames/chort_run_anim_f3.png" type="Texture" id=2]
[ext_resource path="res://frames/chort_idle_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://frames/chort_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://frames/chort_run_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://frames/chort_idle_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://frames/chort_idle_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://frames/chort_run_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Chort.gd" type="Script" id=10]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=11]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=12]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=13]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=14]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=15]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=16]

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 16 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.0
height = 10.0

[sub_resource type="CircleShape2D" id=4]
radius = 50.0

[sub_resource type="CircleShape2D" id=5]
radius = 5.0

[sub_resource type="CircleShape2D" id=6]
radius = 4.12311

[sub_resource type="Animation" id=9]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Chort" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 7 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 9 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 11 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 12 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 13 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 14 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 7 )
shape = SubResource( 6 )

[node name="WanderController" parent="." instance=ExtResource( 15 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 9 )
anims/Stop = SubResource( 10 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="SoftCollision"]
